pkg/testdata/TestPatchVirtualService/use-cases/match-by-uri/baseVS-with-single-route_no-uri-match-found/result/TestMatchByUri-baseVS-with-single-route-no-uri-match-found.golden-0.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: istio-shipping
  namespace: test-namespace
spec:
  gateways:
  - mesh
  hosts:
  - istio-shipping.test-namespace.svc.cluster.local
  - istio-shipping.test-namespace.svc.mesh.sfdc.net
  http:
  - headers:
      request:
        set:
          x-cloud-cost-id: Salesforce DX
    match:
    - port: 7442
      uri:
        prefix: /gpt/dev
    name: http-7442-uri-injected
    retries:
      attempts: 5
      retryOn: cancelled,connect-failure,gateway-error,refused-stream,resource-exhausted,unavailable,retriable-status-codes
      retryRemoteLocalities: true
    route:
    - destination:
        host: istio-shipping.test-namespace.svc.cluster.local
        port:
          number: 7442
    timeout: 15s
  - match:
    - port: 7442
    name: http-7442
    retries:
      attempts: 5
      retryOn: cancelled,connect-failure,gateway-error,refused-stream,resource-exhausted,unavailable,retriable-status-codes
      retryRemoteLocalities: true
    route:
    - destination:
        host: istio-shipping.test-namespace.svc.cluster.local
        port:
          number: 7442
    timeout: 15s
